--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,6 @@
+:focus{
+  outline: none;
+}
 a {
     text-decoration: none;
 }
@@ -42,92 +45,41 @@ color: #2196F3;
 ;
 }
 
-
-.nav a {
+/* navigation-bar */
+.site-nav .nav-link {
 font-family: 'Roboto';
 font-style: normal;
 font-weight: 500;
 font-size: 14px;
 line-height: 16px;
 letter-spacing: 0.02em;
-
 color: #212121;
 }
-
-.nav a:hover,
-.contacts:hover {
-    cursor: pointer;
-    color: #2196F3;
+.site-nav .nav-link:hover,
+.site-nav .nav-link:focus,
+.contacts:hover,
+.contacts:focus{
+color: #2196F3;
+cursor: pointer;
 }
 
-.contacts {
-   font-family: 'Roboto';
+
+/* address */
+.contacts{
+font-family: 'Roboto';
 font-style: normal;
 font-weight: 500;
 font-size: 14px;
 line-height: 16px;
 letter-spacing: 0.02em;
 color: #757575;
-
 }
 
-.hero-section {
-    width: 1600px;
-height: 600px;
-left: 0px;
-top: 80px;
-background: #2F303A;
-}
 
-.hero-title{
-   
-position: absolute;
-width: 696px;
-height: 120px;
-left: 452px;
-top: 280px;
 
-font-family: 'Roboto';
-font-style: normal;
-font-weight: 900;
-font-size: 44px;
-line-height: 60px;
-/* or 136% */
 
-text-align: center;
-letter-spacing: 0.06em;
-text-transform: uppercase;
-
-color: #FFFFFF;
-
-}
+/* hero */
 .hero-btn {
-position: absolute;
-width: 200px;
-height: 50px;
-left: 700px;
-top: 430px;
-
-background: #2196F3;
-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-border-radius: 4px;
-padding: 0px 0px;
-}
-
-.hero-btn-text {
-   margin: 10px 20px 30px 40px;
-padding: 0px 0px;
-font-family: 'Roboto';
-font-style: normal;
-font-weight: 700;
-font-size: 16px;
-line-height: 30px;
-/* identical to box height, or 188% */
-
-display: flex;
-align-items: center;
-text-align: center;
-letter-spacing: 0.06em;
-
-color: #FFFFFF;
+  background-color: blue;
+  color: white;
 }
