--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,15 @@
+/* accent color: #2196F3 */
+/* logo color black: #000000 */
+/* main text color: #212121 */
+/* secondary text color: #757575 */
+/* navigation background color: #FFFFFF */
+/* hero background color: #2F303A */
+/* bottom contacts color: rgba(255,255,255,.6); */
+/* work section background color:  #E5E5E5; */
+/* staff section bg-color: #F5F4FA */
+
+
+
 :focus{
   outline: none;
 }
