--- a/css/styles.css
+++ b/css/styles.css
@@ -4,11 +4,23 @@
 /* secondary text color: #757575 */
 /* navigation background color: #FFFFFF */
 /* hero background color: #2F303A */
-/* bottom contacts color: rgba(255,255,255,.6); */
 /* work section background color:  #E5E5E5; */
 /* staff section bg-color: #F5F4FA */
+/* bottom contacts color: rgba(255,255,255,.6); */
 
 
+/* global variables for layaut colors */
+:root{
+--accent: #2196F3;
+--logo-black: #000000;
+--main-text: #212121;
+--secondary-text-color: #757575;
+--nav-bg-color: #FFFFFF;
+--hero-bg-color: #2F303A;
+--work-bg-color: #E5E5E5;
+--staff-bg-color: #F5F4FA;
+--bottom-contacts-color:  rgba(255,255,255,.6);
+}
 
 :focus{
   outline: none;
@@ -25,36 +37,27 @@ li {
 
 .logo,
 .footer-logo{
-    /* position: absolute;
-width: 145px;
-height: 31px;
-left: 215px;
-top: 24px; */
-
-font-family: 'Raleway';
-font-style: normal;
-font-weight: 700;
-font-size: 26px;
-line-height: 31px;
-/* identical to box height */
-
-letter-spacing: 0.03em;
-
-color: #2196F3;
+  font-family: 'Raleway';
+  font-style: normal;
+  font-weight: 700;
+  font-size: 26px;
+  line-height: 31px;
+  letter-spacing: 0.03em;
+  color: var(--accent);
 }
 
 
 .logo-right {
-    color: #000000;
+    color: var(--logo-black);
 }
 
 .footer-logo-right{
-    color: #ffffff;
+    color: var(--nav-bg-color);
 }
 
 .footer {
     width: auto;
-    background: #2F303A;
+    background: var(--hero-bg-color);
 ;
 }
 
@@ -66,7 +69,7 @@ font-weight: 500;
 font-size: 14px;
 line-height: 16px;
 letter-spacing: 0.02em;
-color: #212121;
+color: var(--main-text);
 }
 .nav .nav-link:hover,
 .nav .nav-link:focus,
@@ -74,7 +77,7 @@ color: #212121;
 .contacts:focus,
 .footer-contacts:hover,
 .footer-contacts:focus{
-color: #2196F3;
+color: var(--accent);
 cursor: pointer;
 }
 
@@ -87,7 +90,7 @@ font-weight: 500;
 font-size: 14px;
 line-height: 16px;
 letter-spacing: 0.02em;
-color: #757575;
+color: var(--secondary-text-color);
 }
 
 
@@ -99,7 +102,7 @@ color: #757575;
 height: 600px;
 left: 0px;
 top: 80px;
-background: #2F303A;
+background: var(--hero-bg-color);
 }
 
 .hero-title {
@@ -114,7 +117,7 @@ line-height: 60px;
 text-align: center;
 letter-spacing: 0.06em;
 text-transform: uppercase;
-color: #FFFFFF;
+color: var(--nav-bg-color);
 }
 .hero-btn {
    
@@ -123,10 +126,8 @@ width: 200px;
 height: 50px;
 left: 700px;
 top: 430px;
-background: #2196F3;
-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-bord
-/* text */
+background: var(--accent);
+box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);  
 text-align: center;
 white-space: nowrap;
 font-family: 'Roboto';
@@ -141,11 +142,24 @@ align-items: center;
 text-align: center;
 letter-spacing: 0.06em;
 
-color: #FFFFFF;
+color: var(--nav-bg-color);
 }
 
-
 /* benefits */
+/* 
+
+/*
+ */
+
+/* work-section */
+
+
+
+/* staff-section */
+.staff{
+    background-color: var(--staff-bg-color);
+}
+
 
 
 /* footer */
@@ -160,7 +174,7 @@ line-height: 24px;
 
 letter-spacing: 0.03em;
 
-color: #FFFFFF;
+color: var(--nav-bg-color);
 }
 
 .footer-contacts{
@@ -173,5 +187,5 @@ line-height: 24px;
 
 letter-spacing: 0.03em;
 
-color: rgba(255, 255, 255, 0.6);
+color: var(--bottom-contacts-color);
 }
