--- a/css/styles.css
+++ b/css/styles.css
@@ -99,7 +99,7 @@ a {
     font-style: normal;
     font-weight: 500;
     font-size: 14px;
-    line-height: 16px;
+    line-height: 1.14;
     letter-spacing: 0.02em;
     color: var(--main-text);
 }
@@ -128,7 +128,7 @@ cursor: pointer;
 font-style: normal;
 font-weight: 500;
 font-size: 14px;
-line-height: 16px;
+line-height: 1.14;
 letter-spacing: 0.02em;
 color: var(--secondary-text-color);
 }
@@ -151,7 +151,7 @@ background: var(--hero-bg-color);
 font-style: normal;
 font-weight: 900;
 font-size: 44px;
-line-height: 60px;
+line-height: 1.36;
 /* or 136% */
 
 text-align: center;
@@ -200,7 +200,7 @@ color: var(--page-bg-color);
   font-style: normal;
   font-weight: 400;
   font-size: 14px;
-  line-height: 24px;
+  line-height: 1.7;
 /* or 171% */
 
 letter-spacing: 0.03em;
@@ -211,7 +211,7 @@ color: var(--page-bg-color);
 .footer-contacts{
     font-weight: 400;
     font-size: 14px;
-    line-height: 24px;
+    line-height: 1.7;
     font-style: normal;
     color: var(--bottom-contacts-color);
     letter-spacing: 0.03em;
