--- a/css/styles.css
+++ b/css/styles.css
@@ -160,21 +160,21 @@ text-transform: uppercase;
 color: var(--page-bg-color);
 }
 .hero-btn {
-   font-family: inherit;
-    position: absolute;
+    background: var(--accent);
+    color: var(--page-bg-color);
+   
+    font-family: inherit;
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 1.88;
+    letter-spacing: 0.06em;
+       
     width: 200px;
     height: 50px;
-
-background: var(--accent);
-
-white-space: nowrap;
-font-style: normal;
-font-weight: 700;
-font-size: 16px;
-text-align: center;
-
-
-color: var(--page-bg-color);
+    border: none;
+    border-radius: 4px;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+    
 }
 
 /* benefits */
@@ -200,9 +200,7 @@ color: var(--page-bg-color);
   font-style: normal;
   font-weight: 400;
   font-size: 14px;
-  line-height: 1.7;
-/* or 171% */
-
+  line-height: 1.71;
 letter-spacing: 0.03em;
 
 color: var(--page-bg-color);
@@ -211,11 +209,51 @@ color: var(--page-bg-color);
 .footer-contacts{
     font-weight: 400;
     font-size: 14px;
-    line-height: 1.7;
+    line-height: 1.71;
     font-style: normal;
     color: var(--bottom-contacts-color);
     letter-spacing: 0.03em;
-/* or 171% */
+
 }
 
 
+
+/* portfolio page */
+
+.list button{
+   font-family: roboto;
+   font-weight: 500;
+   font-size: 16px;
+   line-height: 1.62;
+   
+   text-align: center;
+   letter-spacing: 0.03em;
+   height:38px;
+
+   color: var(--main-text);
+   background-color:var(--staff-bg-color);
+   border: none;
+   border-radius:4px;
+   text-align:center;
+}
+.list button:hover,
+.list button:focus
+{
+    background-color: var(--accent);
+    color: var(--page-bg-color);
+    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+}
+
+.galery-title{
+    font-weight: 700;
+    font-size: 18px;
+    line-height: 2;
+    letter-spacing: 0.06em;
+}
+
+.galery-text{
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 1.88;
+    letter-spacing: 0.03em;
+}
