--- a/css/styles.css
+++ b/css/styles.css
@@ -22,6 +22,11 @@
 --bottom-contacts-color:  rgba(255,255,255,.6);
 }
 
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
 
 :focus{
   outline: none;
@@ -45,19 +50,11 @@ a {
 }
 
 
+.page-header{
+    display: inline;
 
-/* text coloring */
-/* .staff-title,
-.staff-subtitle,
-.work-title,
-.benefits-title{color: var(--main-text);}
+}
 
-
-.benefits-text,
-.staff-text {color: var(--secondary-text-color);} */
-/* or  */
-/*    */
-/*   */
 .section-title {color: var(--main-text);}
 
 .section-text {color: var(--secondary-text-color);}
@@ -69,6 +66,7 @@ a {
 
 .logo,
 .footer-logo{
+    display: inherit;
     color: var(--accent);
     font-family: 'Raleway';
     font-style: normal;
@@ -160,6 +158,7 @@ text-transform: uppercase;
 color: var(--page-bg-color);
 }
 .hero-btn {
+    display: block;
     background: var(--accent);
     color: var(--page-bg-color);
    
@@ -174,9 +173,10 @@ color: var(--page-bg-color);
     border: none;
     border-radius: 4px;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-    
-}
 
+    margin-left: auto;
+    margin-right: auto;
+}
 /* benefits */
 /* 
 
@@ -189,6 +189,10 @@ color: var(--page-bg-color);
 
 /* staff-section */
 .staff{    background-color: var(--staff-bg-color);}
+
+.staff-img {
+    border-radius: 50%;
+}
 
 
 
