--- a/css/styles.css
+++ b/css/styles.css
@@ -10,21 +10,22 @@
 
 
 /* global variables for layaut colors */
-:root{
---accent: #2196F3;
---logo-black: #000000;
---main-text: #212121;
---secondary-text-color: #757575;
---page-bg-color: #FFFFFF;
---hero-bg-color: #2F303A;
---work-bg-color: #E5E5E5;
---staff-bg-color: #F5F4FA;
---bottom-contacts-color:  rgba(255,255,255,.6);
+:root {
+    --accent: #2196F3;
+    --logo-black: #000000;
+    --main-text: #212121;
+    --secondary-text-color: #757575;
+    --page-bg-color: #FFFFFF;
+    --hero-bg-color: #2F303A;
+    --work-bg-color: #E5E5E5;
+    --staff-bg-color: #F5F4FA;
+    --bottom-contacts-color: rgba(255, 255, 255, .6);
 }
 
-*{
+* {
     margin: 0;
 }
+
 /* 
 *,
 *::before,
@@ -32,8 +33,8 @@
   box-sizing: border-box;
 } */
 
-:focus{
-  outline: none;
+:focus {
+    outline: none;
 }
 
 body {
@@ -46,22 +47,26 @@ a {
 
 
 .list {
-    list-style-type: none; 
+    list-style-type: none;
 }
 
-.page{
+.page {
     background-color: var(--page-bg-color);
 }
 
 
-.page-header{
+.page-header {
     display: inline;
 
 }
 
-.section-title {color: var(--main-text);}
+.section-title {
+    color: var(--main-text);
+}
 
-.section-text {color: var(--secondary-text-color);}
+.section-text {
+    color: var(--secondary-text-color);
+}
 
 /* .section-title */
 
@@ -69,7 +74,7 @@ a {
 
 
 .logo,
-.footer-logo{
+.footer-logo {
 
     display: inline;
     color: var(--accent);
@@ -78,7 +83,7 @@ a {
     font-weight: 700;
     font-size: 26px;
     line-height: 1.19;
-  
+
 }
 
 
@@ -86,19 +91,19 @@ a {
     color: var(--logo-black);
 }
 
-.footer-logo-right{
+.footer-logo-right {
     color: var(--page-bg-color);
 }
 
 .footer {
     width: auto;
     background: var(--hero-bg-color);
-;
+    ;
 }
 
 /* navigation-bar */
 .nav .nav-link {
- 
+
     font-style: normal;
     font-weight: 500;
     font-size: 14px;
@@ -119,14 +124,13 @@ a {
 .contacts:hover,
 .contacts:focus,
 .footer-contacts:hover,
-.footer-contacts:focus{
-color: var(--accent);
-cursor: pointer;
+.footer-contacts:focus {
+    color: var(--accent);
+    cursor: pointer;
 }
 
 
-.address
- {
+.address {
     display: inline;
 }
 
@@ -134,14 +138,14 @@ cursor: pointer;
 
 
 
-.contacts{
+.contacts {
 
-font-style: normal;
-font-weight: 500;
-font-size: 14px;
-line-height: 1.14;
-letter-spacing: 0.02em;
-color: var(--secondary-text-color);
+    font-style: normal;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 1.14;
+    letter-spacing: 0.02em;
+    color: var(--secondary-text-color);
 }
 
 
@@ -149,55 +153,90 @@ color: var(--secondary-text-color);
 
 /* hero */
 .hero-section {
- /* width: 1600px;
+    /* width: 1600px;
 height: 600px; */
-/* left: 0px;
+    /* left: 0px;
 top: 80px; */
-background: var(--hero-bg-color);
+    display: block;
+    padding-bottom: 200px;
+    background: var(--hero-bg-color);
 }
 
 .hero-title {
 
-font-weight: 900;
-font-size: 44px;
-line-height: 1.36;
+    font-weight: 900;
+    font-size: 44px;
+    line-height: 1.36;
 
-text-align: center;
-letter-spacing: 0.06em;
-text-transform: uppercase;
-color: var(--page-bg-color);
+    text-align: center;
+    letter-spacing: 0.06em;
+    text-transform: uppercase;
+    color: var(--page-bg-color);
+    padding-top: 200px;
+    padding-bottom: 30px;
+
 }
 
 .hero-btn {
     display: block;
     background: var(--accent);
     color: var(--page-bg-color);
-   
+
     font-family: inherit;
     font-weight: 700;
     font-size: 16px;
     line-height: 1.88;
     letter-spacing: 0.06em;
-       
+
     width: 200px;
     height: 50px;
     border: none;
     border-radius: 4px;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-
+    padding: 0;
     margin-left: auto;
     margin-right: auto;
+
+
 }
+
 /* benefits */
+
+.section.benefits {
+    display: block;
+    margin-left: auto;
+}
+
+.section.benefits .list {
+    display: flex;
+    justify-content: center;
+
+    padding-left: 0px;
+    padding-top: 70px;
+}
+
+.section.benefits ul li {
+    display: inline-block;
+
+    width: 270px;
+    padding-right: 30px;
+    /* margin-left: auto;
+    margin-right: auto; */
+
+
+}
+
 .benefits-title {
-     width: 270px;
-     font-weight: 700;
-     font-size: 14px;
-     line-height: 1.14;
-     letter-spacing: 0.03em;
-     text-transform: uppercase;
-} 
+
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 1.14;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+}
+
 .benefits-text {
+
     width: 270px;
     font-weight: 400;
     font-size: 14px;
@@ -216,7 +255,7 @@ color: var(--page-bg-color);
     line-height: 1.17;
     text-align: center;
     letter-spacing: 0.03em;
-margin: 0;
+    margin: 0;
     padding-top: 94px;
     padding-bottom: 50px;
 }
@@ -230,25 +269,27 @@ margin: 0;
 
 
 /* staff-section */
-.staff{    background-color: var(--staff-bg-color);}
+.staff {
+    background-color: var(--staff-bg-color);
+}
 
 .section.staff,
 .section.work {
-   
-text-align: center;
-list-style: none;
+
+    text-align: center;
+    list-style: none;
 }
 
 
 .staff-card {
-  display: inline-block;
+    display: inline-block;
     width: 270;
     height: 368;
     background: var(--page-bg-color);
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
-border-radius: 0px 0px 4px 4px;
-margin-right: 30px;
-margin-bottom: 94px;
+    border-radius: 0px 0px 4px 4px;
+    margin-right: 30px;
+    margin-bottom: 94px;
 }
 
 .staff-img {
@@ -261,11 +302,11 @@ margin-bottom: 94px;
 }
 
 
-.staff-subtitle{
+.staff-subtitle {
     font-weight: 500;
     font-size: 16px;
     line-height: 1.19;
-     
+
     text-align: center;
     letter-spacing: 0.03em;
     margin-top: 0px;
@@ -276,12 +317,12 @@ margin-bottom: 94px;
     font-weight: 400;
     font-size: 16px;
     line-height: 19px;
-        
+
     text-align: center;
     letter-spacing: 0.03em;
 
     margin-top: 0px;
-    margin-bottom: 30px ;
+    margin-bottom: 30px;
 }
 
 
@@ -294,17 +335,17 @@ margin-bottom: 94px;
 
 /* footer */
 
-.footer-text{
-  font-style: normal;
-  font-weight: 400;
-  font-size: 14px;
-  line-height: 1.71;
-letter-spacing: 0.03em;
+.footer-text {
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 1.71;
+    letter-spacing: 0.03em;
 
-color: var(--page-bg-color);
+    color: var(--page-bg-color);
 }
 
-.footer-contacts{
+.footer-contacts {
     font-weight: 400;
     font-size: 14px;
     line-height: 1.71;
@@ -318,38 +359,38 @@ color: var(--page-bg-color);
 
 /* portfolio page */
 
-.list button{
-   font-family: roboto;
-   font-weight: 500;
-   font-size: 16px;
-   line-height: 1.62;
-   
-   text-align: center;
-   letter-spacing: 0.03em;
-   height:38px;
+.list button {
+    font-family: roboto;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.62;
 
-   color: var(--main-text);
-   background-color:var(--staff-bg-color);
-   border: none;
-   border-radius:4px;
-   text-align:center;
+    text-align: center;
+    letter-spacing: 0.03em;
+    height: 38px;
+
+    color: var(--main-text);
+    background-color: var(--staff-bg-color);
+    border: none;
+    border-radius: 4px;
+    text-align: center;
 }
+
 .list button:hover,
-.list button:focus
-{
+.list button:focus {
     background-color: var(--accent);
     color: var(--page-bg-color);
     box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 
-.galery-title{
+.galery-title {
     font-weight: 700;
     font-size: 18px;
     line-height: 2;
     letter-spacing: 0.06em;
 }
 
-.galery-text{
+.galery-text {
     font-weight: 400;
     font-size: 16px;
     line-height: 1.88;
