--- a/css/styles.css
+++ b/css/styles.css
@@ -22,8 +22,14 @@
     --bottom-contacts-color: rgba(255, 255, 255, .6);
 }
 
-* {
-    margin: 0;
+html {
+    box-sizing: border-box;
+}
+
+*,
+*::before,
+*::after {
+    box-sizing: inherit;
 }
 
 /* 
@@ -39,6 +45,7 @@
 
 body {
     font-family: roboto, sans-serif;
+    margin: 0px;
 }
 
 a {
@@ -48,6 +55,8 @@ a {
 
 .list {
     list-style-type: none;
+    margin: 0;
+    padding: 0;
 }
 
 .page {
@@ -159,6 +168,7 @@ height: 600px; */
 top: 80px; */
     display: block;
     padding-bottom: 200px;
+    padding-top: 200px;
     background: var(--hero-bg-color);
 }
 
@@ -172,8 +182,7 @@ top: 80px; */
     letter-spacing: 0.06em;
     text-transform: uppercase;
     color: var(--page-bg-color);
-    padding-top: 200px;
-    padding-bottom: 30px;
+    margin-bottom: 30px;
 
 }
 
@@ -205,6 +214,7 @@ top: 80px; */
 .section.benefits {
     display: block;
     margin-left: auto;
+    margin-top: 70px;
 }
 
 .section.benefits .list {
@@ -212,14 +222,14 @@ top: 80px; */
     justify-content: center;
 
     padding-left: 0px;
-    padding-top: 70px;
+
 }
 
 .section.benefits ul li {
     display: inline-block;
 
     width: 270px;
-    padding-right: 30px;
+    margin-right: 30px;
     /* margin-left: auto;
     margin-right: auto; */
 
@@ -233,6 +243,7 @@ top: 80px; */
     line-height: 1.14;
     letter-spacing: 0.03em;
     text-transform: uppercase;
+    margin-bottom: 10px;
 }
 
 .benefits-text {
@@ -256,8 +267,7 @@ top: 80px; */
     text-align: center;
     letter-spacing: 0.03em;
     margin: 0;
-    padding-top: 94px;
-    padding-bottom: 50px;
+    margin-bottom: 50px;
 }
 
 .work-img {
@@ -278,6 +288,8 @@ top: 80px; */
 
     text-align: center;
     list-style: none;
+    padding-top: 94px;
+    padding-bottom: 94px;
 }
 
 
@@ -289,7 +301,7 @@ top: 80px; */
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
     border-radius: 0px 0px 4px 4px;
     margin-right: 30px;
-    margin-bottom: 94px;
+
 }
 
 .staff-img {
