added container class to page portfolio

--- a/css/styles.css
+++ b/css/styles.css
@@ -392,7 +392,17 @@ top: 80px; */
     border: none;
     border-radius: 4px;
     text-align: center;
+    padding: 6px 22px;
 }
+
+
+.portfolio-item {
+    width: 370px;
+    font-size: 0px;
+    border: 1px solid #EEEEEE;
+    margin: 30px 30px;
+}
+
 
 .list button:hover,
 .list button:focus {
@@ -401,11 +411,17 @@ top: 80px; */
     box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 
+
+.list.wraper {
+    font-size: 0;
+}
+
 .galery-title {
     font-weight: 700;
     font-size: 18px;
     line-height: 2;
     letter-spacing: 0.06em;
+    margin: 20px 24px 0px;
 }
 
 .galery-text {
@@ -413,4 +429,5 @@ top: 80px; */
     font-size: 16px;
     line-height: 1.88;
     letter-spacing: 0.03em;
+    margin: 4px 24px 20px;
 }
