--- a/css/styles.css
+++ b/css/styles.css
@@ -47,6 +47,7 @@ html {
 
 body {
     font-family: roboto, sans-serif;
+    color: var(--main-text);
     margin: 0px;
 }
 
@@ -67,7 +68,10 @@ a {
 
 
 .page-header {
-    display: inline;
+    display: block;
+    padding-top: 24px;
+    padding-bottom: 24px;
+
 
 }
 
@@ -109,7 +113,8 @@ a {
 .footer {
     width: auto;
     background: var(--hero-bg-color);
-    ;
+    padding-top: 60px;
+    padding-bottom: 60px;
 }
 
 /* navigation-bar */
@@ -247,15 +252,17 @@ top: 80px; */
     line-height: 1.14;
     letter-spacing: 0.03em;
     text-transform: uppercase;
+    margin-top: 0;
     margin-bottom: 10px;
 }
 
 .benefits-text {
 
     width: 270px;
-    font-weight: 400;
+    /* font-weight: 400; */
     font-size: 14px;
     line-height: 1.71;
+    margin: 0;
 
 }
 
@@ -330,7 +337,7 @@ top: 80px; */
 }
 
 .staff-text {
-    font-weight: 400;
+    /* font-weight: 400; */
     font-size: 16px;
     line-height: 19px;
 
@@ -357,23 +364,33 @@ top: 80px; */
 
 /* footer */
 
+.footer-logo {
+    display: block;
+    margin-bottom: 20px;
+}
+
+
 .footer-text {
     font-style: normal;
-    font-weight: 400;
+    /* font-weight: 400; */
     font-size: 14px;
     line-height: 1.71;
     letter-spacing: 0.03em;
+    margin-top: 0;
+    margin-bottom: 9px;
 
     color: var(--page-bg-color);
 }
 
 .footer-contacts {
-    font-weight: 400;
+    /* font-weight: 400; */
+    display: block;
     font-size: 14px;
     line-height: 1.71;
     font-style: normal;
     color: var(--bottom-contacts-color);
     letter-spacing: 0.03em;
+    margin-bottom: 9px;
 
 }
 
@@ -400,19 +417,19 @@ top: 80px; */
 }
 
 
+.list button:hover,
+.list button:focus {
+    background-color: var(--accent);
+    color: var(--page-bg-color);
+    cursor: pointer;
+    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+}
+
 .portfolio-item {
     width: 370px;
     font-size: 0px;
     border: 1px solid #EEEEEE;
     margin: 30px 30px;
-}
-
-
-.list button:hover,
-.list button:focus {
-    background-color: var(--accent);
-    color: var(--page-bg-color);
-    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 
 
@@ -429,7 +446,7 @@ top: 80px; */
 }
 
 .galery-text {
-    font-weight: 400;
+    /* font-weight: 400; */
     font-size: 16px;
     line-height: 1.88;
     letter-spacing: 0.03em;
