--- a/css/styles.css
+++ b/css/styles.css
@@ -68,7 +68,6 @@ a {
 
 
 .page-header {
-    display: block;
     padding-top: 24px;
     padding-bottom: 25px
 }
@@ -79,6 +78,12 @@ a {
 
 .section-text {
     color: var(--secondary-text-color);
+}
+
+.flex-container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 
 /* .section-title */
@@ -116,6 +121,23 @@ a {
 }
 
 /* navigation-bar */
+
+.nav,
+.nav.list,
+.address .list {
+    display: flex;
+}
+
+.nav>.list>li:not(:last-child) {
+    margin-right: 50px;
+}
+
+
+.address>.list>li:not(:last-child) {
+    margin-right: 20px;
+}
+
+
 .nav .nav-link {
 
     font-style: normal;
@@ -124,12 +146,22 @@ a {
     line-height: 1.14;
     letter-spacing: 0.02em;
     color: var(--main-text);
+
 }
+
+
+
+
 
 
 /* current position */
 .nav .nav-link.curent {
     color: var(--accent);
+}
+
+
+.nav .logo {
+    margin-right: 93px;
 }
 
 /* hover/focus effects */
@@ -144,12 +176,12 @@ a {
 }
 
 
-.address {
-    display: inline;
-}
+
 
 /* address */
-
+.address {
+    display: flex;
+}
 
 
 .contacts {
@@ -233,15 +265,16 @@ top: 80px; */
 }
 
 .section.benefits ul li {
-    display: inline-block;
-
     width: 270px;
-    margin-right: 30px;
+
     /* margin-left: auto;
     margin-right: auto; */
-
-
 }
+
+.section.benefits ul li:not(:last-child) {
+    margin-right: 30px;
+}
+
 
 .benefits-title {
 
@@ -281,9 +314,12 @@ top: 80px; */
 
 .work-img {
     display: block;
-    margin-right: 30px;
+    /* margin-right: 30px; */
 }
 
+.work-item:not(:last-child) {
+    margin-right: 30px;
+}
 
 
 
@@ -291,6 +327,8 @@ top: 80px; */
 .staff {
     background-color: var(--staff-bg-color);
 }
+
+
 
 .section.staff,
 .section.work {
@@ -309,8 +347,12 @@ top: 80px; */
     background: var(--page-bg-color);
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
     border-radius: 0px 0px 4px 4px;
-    margin-right: 30px;
 
+
+}
+
+.staff-card:not(:last-child) {
+    margin-right: 30px;
 }
 
 .staff-img {
@@ -348,6 +390,7 @@ top: 80px; */
 
 
 .container {
+
     width: 1200px;
     margin: 0 auto;
     padding: 0 15px;
@@ -402,6 +445,9 @@ top: 80px; */
 }
 
 .portfolio>.container>.list {
+    display: flex;
+    align-items: center;
+    justify-content: center;
     margin-bottom: 50px;
 }
 
@@ -421,7 +467,9 @@ top: 80px; */
     border-radius: 4px;
     text-align: center;
     padding: 6px 22px;
+    margin-right: 8px;
 }
+
 
 
 .list button:hover,
