--- a/css/styles.css
+++ b/css/styles.css
@@ -20,6 +20,8 @@
     --work-bg-color: #E5E5E5;
     --staff-bg-color: #F5F4FA;
     --bottom-contacts-color: rgba(255, 255, 255, .6);
+    --nav-bottom-line-color: #ECECEC;
+    --portfolio-card-border-color: #EEEEEE;
 }
 
 html {
@@ -69,7 +71,9 @@ a {
 
 .page-header {
     padding-top: 24px;
-    padding-bottom: 25px
+    padding-bottom: 25px;
+    border-bottom: 1px solid #ECECEC;
+
 }
 
 .section-title {
@@ -126,6 +130,7 @@ a {
 .nav.list,
 .address .list {
     display: flex;
+    align-items: center;
 }
 
 .nav>.list>li:not(:last-child) {
@@ -446,6 +451,7 @@ top: 80px; */
 
 .portfolio>.container>.list {
     display: flex;
+    flex-wrap: wrap;
     align-items: center;
     justify-content: center;
     margin-bottom: 50px;
@@ -483,10 +489,20 @@ top: 80px; */
 .portfolio-item {
     width: 370px;
     font-size: 0px;
-    border: 1px solid #EEEEEE;
+    border: 1px solid var(--portfolio-card-border-color);
+    margin-right: 30px;
+    margin-bottom: 30px;
+    padding-bottom: 20px;
 
 }
 
+.portfolio-item:nth-child(3n) {
+    margin-right: 0;
+}
+
+.portfolio-item:nth-last-child(-n+3) {
+    margin-bottom: 0px;
+}
 
 .list.wraper {
     font-size: 0;
@@ -505,5 +521,5 @@ top: 80px; */
     font-size: 16px;
     line-height: 1.88;
     letter-spacing: 0.03em;
-    margin: 4px 24px 20px;
+    margin: 4px 24px 0px;
 }
