--- a/css/styles.css
+++ b/css/styles.css
@@ -28,7 +28,9 @@ html {
     outline: none;
 }
 
+html,
 body {
+    height: 100%;
     font-family: roboto, sans-serif;
     color: var(--main-text);
     margin: 0px;
@@ -38,6 +40,15 @@ a {
     text-decoration: none;
 }
 
+.wraper {
+    min-height: 100%;
+    display: flex;
+    flex-direction: column;
+}
+
+.main {
+    flex: 1 1 auto;
+}
 
 .list {
     list-style-type: none;
@@ -297,8 +308,10 @@ top: 80px; */
 }
 
 
-.work-list {
+.work-list,
+.staff-list {
     display: flex;
+
 }
 
 
@@ -328,9 +341,7 @@ top: 80px; */
     padding-bottom: 94px;
 }
 
-.staff-list {
-    display: flex;
-}
+
 
 .staff-card {
 
@@ -352,7 +363,7 @@ top: 80px; */
     margin-left: auto;
     margin-right: auto;
     margin-bottom: 30px;
-    border-radius: 0px 0px 4px 4px;
+
 
 }
 
@@ -388,10 +399,7 @@ top: 80px; */
     padding: 0 15px;
 }
 
-/* .wraper li {
-    display: inline-block;
 
-} */
 
 
 
@@ -501,7 +509,7 @@ top: 80px; */
     margin-bottom: 0px;
 }
 
-.list.wraper {
+.work-item {
     font-size: 0;
 }
 
