--- a/css/styles.css
+++ b/css/styles.css
@@ -40,7 +40,7 @@ a {
     text-decoration: none;
 }
 
-.wraper {
+.wrapper {
     min-height: 100%;
     display: flex;
     flex-direction: column;
@@ -204,7 +204,6 @@ top: 80px; */
     display: block;
     padding-bottom: 200px;
     padding-top: 200px;
-    margin-bottom: 70px;
     background: var(--hero-bg-color);
 }
 
@@ -248,13 +247,15 @@ top: 80px; */
 
 /* benefits */
 
-.section.benefits {
-    display: block;
-    margin-left: auto;
+.section-benefits,
+.section-staff {
+    padding-top: 94px;
+    padding-bottom: 94px;
+
 
 }
 
-.section.benefits .list {
+.section-benefits .list {
     display: flex;
     justify-content: center;
 
@@ -262,11 +263,11 @@ top: 80px; */
 
 }
 
-.section.benefits ul li {
+.section-benefits ul li {
     width: calc((100% - 90px) / 4);
 }
 
-.section.benefits ul li:not(:last-child) {
+.section-benefits ul li:not(:last-child) {
     margin-right: 30px;
 }
 
@@ -326,18 +327,16 @@ top: 80px; */
 
 
 /* staff-section */
-.staff {
+.section-staff {
     background-color: var(--staff-bg-color);
 }
 
 
 
-.section.staff,
-.section.work {
-
+.section-staff,
+.section-work {
     text-align: center;
     list-style: none;
-    padding-top: 94px;
     padding-bottom: 94px;
 }
 
