--- a/css/styles.css
+++ b/css/styles.css
@@ -504,7 +504,6 @@ top: 80px; */
     border: 1px solid var(--portfolio-card-border-color);
     margin-right: 30px;
     margin-bottom: 30px;
-    padding-bottom: 20px;
 }
 
 .portfolio-item:nth-child(3n) {
@@ -514,6 +513,13 @@ top: 80px; */
 .portfolio-item:nth-last-child(-n+3) {
     margin-bottom: 0px;
 }
+
+
+.portfolio-link {
+    display: block;
+}
+
+
 
 .work-item {
     font-size: 0;
@@ -533,4 +539,5 @@ top: 80px; */
     line-height: 1.88;
     letter-spacing: 0.03em;
     margin: 4px 24px 0px;
+    padding-bottom: 20px;
 }
