--- a/css/styles.css
+++ b/css/styles.css
@@ -521,9 +521,11 @@ top: 80px; */
 
 .card-content {
     padding: 20px 24px;
-
     border: 1px solid var(--portfolio-card-border-color);
     border-top: 0;
+    border-bottom-left-radius: 4px;
+    border-bottom-right-radius: 4px;
+
 }
 
 .work-item {
